Renaming keys #2: (Discussion from r8115 ) foxtrick.AttVsDef.oldstyleifkseperated.desc -> foxtrick.AttVsDef.oldstyleifkseparated.desc
git-svn-id: https://foxtrick.googlecode.com/svn/branches/0.8@8145 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/bg/foxtrick.properties
+++ b/content/locale/bg/foxtrick.properties
@@ -14,7 +14,7 @@ foxtrick.MoveLinks.desc=Moves the manager's league and flag links to the message
 foxtrick.AttVsDef.desc=Adds attack/defense comparison to the match page
 foxtrick.AttVsDef.oldstyle.desc=old style
 foxtrick.AttVsDef.newstyle.desc=new style
-foxtrick.AttVsDef.oldstyleifkseperated.desc=old style (separated ind. freekicks)
+foxtrick.AttVsDef.oldstyleifkseparated.desc=old style (separated ind. freekicks)
 #Ratings
 foxtrick.Ratings.desc=Adds ratings to the match page
 foxtrick.BookmarkAdjust.desc=Change the icon associated to a bookmark inserting in the bookmark comment the correspondent code in square bracket: e.g. [cyan] will show the cyan icon. Possible values: aqua, B, black, blue, brown, cyan, darkpurple, green, idea, lightblue, lightgreen, orange, pink, purple, red, white, yellow
