--- a/content/locale/da/foxtrick.properties
+++ b/content/locale/da/foxtrick.properties
@@ -15,7 +15,7 @@ foxtrick.MoveLinks.desc=Flytter managerens liga og flag links, til 'emne bjælke
 foxtrick.AttVsDef.desc=Adds attack/defense comparison to the match page
 foxtrick.AttVsDef.oldstyle.desc=old style
 foxtrick.AttVsDef.newstyle.desc=new style
-foxtrick.AttVsDef.oldstyleifkseperated.desc=old style (separated ind. freekicks)
+foxtrick.AttVsDef.oldstyleifkseparated.desc=old style (separated ind. freekicks)
 #Ratings
 foxtrick.Ratings.desc=Adds ratings to the match page
 foxtrick.BookmarkAdjust.desc=Skift ikonet af forbundet til et bogmærke indsættelse i bogmærket kommentere de korrespondent kode i skarpe beslag: es [cyan] vil vise cyan ikon. Mulige værdier: aqua, B, sort, blå, brun, cyan, darkpurple, grøn, idé, lyseblå, lightgreen, orange, pink, lilla, rød, hvid, gulfoxtrick.FoxtrickAlert.desc= Giver dig en 'knurre' anmeldelse om Hattrick nyheder
