--- a/content/locale/de/foxtrick.properties
+++ b/content/locale/de/foxtrick.properties
@@ -27,7 +27,7 @@ foxtrick.MoveLinks.desc=Liga und Länderflagge im Postingkopf anzeigen
 foxtrick.AttVsDef.desc=Grafischen Teamvergleich im Spielbericht anzeigen
 foxtrick.AttVsDef.oldstyle.desc=Alter Stil
 foxtrick.AttVsDef.newstyle.desc=Neuer Stil
-foxtrick.AttVsDef.oldstyleifkseperated.desc=Alter Style (ind. Freistösse separat)
+foxtrick.AttVsDef.oldstyleifkseparated.desc=Alter Style (ind. Freistösse separat)
 #Ratings
 foxtrick.Ratings.desc=Anzeige diverser Ratings im Spielbericht
 foxtrick.Ratings.HatStats.desc=HatStats
