--- a/content/locale/fy/foxtrick.properties
+++ b/content/locale/fy/foxtrick.properties
@@ -14,7 +14,7 @@ foxtrick.MoveLinks.desc=							Ferpleatst kompetysje en flagkoppelings nei berjo
 foxtrick.AttVsDef.desc=								Foeget oanfal/ferdigeningsfergeliking ta oan de wedstriidside
 foxtrick.AttVsDef.oldstyle.desc=					âlde styl
 foxtrick.AttVsDef.newstyle.desc=					nije  styl
-foxtrick.AttVsDef.oldstyleifkseperated.desc=		âlde styl (aparte ynd. frije trapen)
+foxtrick.AttVsDef.oldstyleifkseparated.desc=		âlde styl (aparte ynd. frije trapen)
 #Ratings
 foxtrick.Ratings.desc=								Foeget wurdearrings ta oan de wedstriidside
 foxtrick.BookmarkAdjust.desc=						Feroaret it ikoan by in blêdwizer atst de byhearrende koade yn it kommintaar fan de blêdwizer setst: [cyan] toant bygelyks it cyaankleurde ikoan. Mooglike weardes: aqua, B, black, blue, brown, cyan, darkpurple, green, idea, lightblue, lightgreen, orange, pink, purple, red, white, yellow
