--- a/content/locale/gl/foxtrick.properties
+++ b/content/locale/gl/foxtrick.properties
@@ -15,7 +15,7 @@ foxtrick.MoveLinks.desc=Move os enlaces de liga e bandeira do manager ó encabez
 foxtrick.AttVsDef.desc=Engade as comparativas de ataque/defensa na páxina do encontro
 foxtrick.AttVsDef.oldstyle.desc=vello estilo
 foxtrick.AttVsDef.newstyle.desc=novo estilo
-foxtrick.AttVsDef.oldstyleifkseperated.desc=vello estilo (separando os lanzamentos de falta indirectos)
+foxtrick.AttVsDef.oldstyleifkseparated.desc=vello estilo (separando os lanzamentos de falta indirectos)
 #Ratings
 foxtrick.Ratings.desc=Engade as cualificacións á páxina do encontro
 foxtrick.BookmarkAdjust.desc=Cambia a icona asociada a un marcador insertando no comentario do mesmo o código correspondente entre corchetes: p.ex. [cyan] mostra a icona azul cian. Valores posibeis: aqua(auga), B(negriña), black(negro), blue(azul), Brown(marrón), cyan(azul cian), darkpurple(morado escuro), green(verde), idea, lightblue(azul claro), lightgreen(verde claro), orange(laranxa), pink(rosa), purple(morado), red(vermello), White(branco), yellow(amárelo)
