--- a/content/locale/gr/foxtrick.properties
+++ b/content/locale/gr/foxtrick.properties
@@ -13,7 +13,7 @@ foxtrick.MoveLinks.desc=Μεταφέρει την κατηγορία και τη
 foxtrick.Matches.desc=Προσθέτει σύγκριση επίθεσης/άμυνας στην σελίδα του αγώνα.
 foxtrick.Matches.oldstyle.desc=παλιό στυλ
 foxtrick.Matches.newstyle.desc=νέο στυλ
-foxtrick.AttVsDef.oldstyleifkseperated.desc=παλιό στυλ (ξεχωριστά εμμ.φάουλ)
+foxtrick.AttVsDef.oldstyleifkseparated.desc=παλιό στυλ (ξεχωριστά εμμ.φάουλ)
 #Ratings
 foxtrick.Ratings.desc=Προσθέτει αξιολογήσεις στη σελίδα του αγώνα
 foxtrick.BookmarkAdjust.desc=Αλλάζει το εικονίδιο ενός σελιδοδείκτη εισάγοντας στα σχόλια του σελιδοδείκτη τον αντίστοιχο κωδικό χρώματος: π.χ. [cyan]. Παράμετροι: aqua, B, black, blue, brown, cyan, darkpurple, green, idea, lightblue, lightgreen, orange, pink, purple, red, white, yellow
