--- a/content/locale/hr/foxtrick.properties
+++ b/content/locale/hr/foxtrick.properties
@@ -18,7 +18,7 @@ foxtrick.MoveLinks.desc=Premjestiti linkove s korisnikovom ligom i zastavicom u 
 foxtrick.AttVsDef.desc=Dodati usporedbe napad/obrana u izvješće s utakmice
 foxtrick.AttVsDef.oldstyle.desc=stari stil
 foxtrick.AttVsDef.newstyle.desc=novi stil
-foxtrick.AttVsDef.oldstyleifkseperated.desc=stari stil (s odvojenim ind. slob. udarcima)
+foxtrick.AttVsDef.oldstyleifkseparated.desc=stari stil (s odvojenim ind. slob. udarcima)
 #Ratings
 foxtrick.Ratings.desc=Dodati ocjene u izvješće s utakmice
 foxtrick.BookmarkAdjust.desc=Promijeniti boju ikone koja služi za umetanje komentara u zabilješke poradi lakšeg isticanja. Upotrijebiti uglaste zagrade za umetanje koda za boju: npr. [green] će obojiti ikonu u zeleno. Moguće vrijednosti: aqua, B, black, blue, brown, cyan, darkpurple, green, idea, lightblue, lightgreen, orange, pink, purple, red, white, yellow
