--- a/content/locale/it/foxtrick.properties
+++ b/content/locale/it/foxtrick.properties
@@ -20,7 +20,7 @@ foxtrick.MoveLinks.desc=Sposta la serie e la bandierina del manager nell'intesta
 foxtrick.AttVsDef.desc=Aggiunge i confronti attacco/difesa nella pagina della partita
 foxtrick.AttVsDef.oldstyle.desc=Vecchio stile
 foxtrick.AttVsDef.newstyle.desc=Nuovo stile
-foxtrick.AttVsDef.oldstyleifkseperated.desc=Vecchio stile (punizioni indirette separate)
+foxtrick.AttVsDef.oldstyleifkseparated.desc=Vecchio stile (punizioni indirette separate)
 #Ratings
 foxtrick.Ratings.desc=Aggiunge indicatori sintetici alla pagina della partita
 foxtrick.BookmarkAdjust.desc=Cambia il colore dell'icona associata ad un segnalibro se si inserisce nella descrizione il codice corrispondente: esempio [red] visualizzerà l'icona in rosso. Possibili valori: aqua, B, black, blue, brown, cyan, darkpurple, green, idea, lightblue, lightgreen, orange, pink, purple, red, white, yellow
