--- a/content/locale/lb/foxtrick.properties
+++ b/content/locale/lb/foxtrick.properties
@@ -20,7 +20,7 @@ foxtrick.MoveLinks.desc=Dem Manager seng Liga a säi Fändel ginn an de Kapp vum
 foxtrick.AttVsDef.desc=De Vergläich Stuerm/Verteidegung gëtt an de Rapport vun engem Match gesat
 foxtrick.AttVsDef.oldstyle.desc=Al Stil
 foxtrick.AttVsDef.newstyle.desc=Neie Stil
-foxtrick.AttVsDef.oldstyleifkseperated.desc=Ale Stil (indirekt Strofstéiss getrennt)
+foxtrick.AttVsDef.oldstyleifkseparated.desc=Ale Stil (indirekt Strofstéiss getrennt)
 #Ratings
 foxtrick.Ratings.desc=D'Bewäertunge ginn op d'Säit fir d'Mätscher gesat
 foxtrick.BookmarkAdjust.desc=D'Faarf vun enger Ikon vun engem Favoritt gëtt geännert jee nodeem wat fir e Code am Kommentar zu deem Favoritt an enger eckeger Klamer steet: Mat [cyan] ass d'Faarf vun der Ikon dann och cyan. Méiglech Wäerter: aqua, B, black, blue, brown, cyan, darkpurple, green, idea, lightblue, lightgreen, orange, pink, purple, red, white, yellow
