--- a/content/locale/lt/foxtrick.properties
+++ b/content/locale/lt/foxtrick.properties
@@ -15,7 +15,7 @@ foxtrick.MoveLinks.desc=Perkelia komandos savininko grupės ir šalies nuorodas 
 foxtrick.AttVsDef.desc=Prideda atakos/gynybos palyginimą rungtynių puslapyje
 foxtrick.AttVsDef.oldstyle.desc=senuoju stiliumi
 foxtrick.AttVsDef.newstyle.desc=naujuoju stiliumi
-foxtrick.AttVsDef.oldstyleifkseperated.desc=senasis stilius (netiesioginiai baudos smūgiai rodomi atskirai)
+foxtrick.AttVsDef.oldstyleifkseparated.desc=senasis stilius (netiesioginiai baudos smūgiai rodomi atskirai)
 #Ratings
 foxtrick.Ratings.desc=Rodo reitingus rungtynių puslapyje
 foxtrick.BookmarkAdjust.desc=Pakeičia žymeklių komentaro paveikslėlio spalvą į tokią, kurią nurodėte skliausteliuose: pavyzdžiui [cyan] rodys žydrą paveikslėlį. Galimos spalvos ir jų reikšmės: aqua, B, black, blue, brown, cyan, darkpurple, green, idea, lightblue, lightgreen, orange, pink, purple, red, white, yellow
