--- a/content/locale/mk/foxtrick.properties
+++ b/content/locale/mk/foxtrick.properties
@@ -20,7 +20,7 @@ foxtrick.MoveLinks.desc=Ги поместува линковите до мена
 foxtrick.AttVsDef.desc=Додава споредба за напад/одбрана на страницата од натпреварот
 foxtrick.AttVsDef.oldstyle.desc=стар стил
 foxtrick.AttVsDef.newstyle.desc=нов стил
-foxtrick.AttVsDef.oldstyleifkseperated.desc=стар стил (одделен инд. слободни)
+foxtrick.AttVsDef.oldstyleifkseparated.desc=стар стил (одделен инд. слободни)
 #Ratings
 foxtrick.Ratings.desc=Додава рејтинзи на страницата од натпреварот
 foxtrick.BookmarkAdjust.desc=Измени ја иконата поврзана со маркерите внесена во коментарот од маркерот во соодветниот код во големи загради: пр. [cyan] ќе ја прикаже тиркизната боја. Можни вредности: aqua, B, black, blue, brown, cyan, darkpurple, green, idea, lightblue, lightgreen, orange, pink, purple, red, white, yellow
