--- a/content/locale/mt/foxtrick.properties
+++ b/content/locale/mt/foxtrick.properties
@@ -20,7 +20,7 @@ foxtrick.MoveLinks.desc=Imexxi l-links tas-serje u tal-bandiera tal-maniġer għ
 foxtrick.AttVsDef.desc=Iżid paragun bejn l-attakk u d-difens fuq il-paġna tal-partita
 foxtrick.AttVsDef.oldstyle.desc=stil antik
 foxtrick.AttVsDef.newstyle.desc=stil ġdid
-foxtrick.AttVsDef.oldstyleifkseperated.desc=stil antik (set pieces ind. separati)
+foxtrick.AttVsDef.oldstyleifkseparated.desc=stil antik (set pieces ind. separati)
 #Ratings
 foxtrick.Ratings.desc=Iżid l-evalwazzjoni fuq il-paġna tal-partita
 foxtrick.BookmarkAdjust.desc=Jibdel is-simbolu assoċjat ma' bookmark billi jdaħħal kumment rigward il-kodiċi fil-bookmark u dan irid isir f'parentesi kwadri: e.ż. [cyan] se juri simbolu għaċ-ċelest. Dan jista' jkun: aqua, B, black, blue, brown, cyan, darkpurple, green, idea, lightblue, lightgreen, orange, pink, purple, red, white, yellow
