--- a/content/locale/no/foxtrick.properties
+++ b/content/locale/no/foxtrick.properties
@@ -15,7 +15,7 @@ foxtrick.MoveLinks.desc=Flytt managerens liga og flagglenker til meldingsetikett
 foxtrick.AttVsDef.desc=Legg en angrep/forsvars sammenligning til kampsiden
 foxtrick.AttVsDef.oldstyle.desc=gammel stil
 foxtrick.AttVsDef.newstyle.desc=ny stil
-foxtrick.AttVsDef.oldstyleifkseperated.desc=gammel stil (separerte indirekte frispark)
+foxtrick.AttVsDef.oldstyleifkseparated.desc=gammel stil (separerte indirekte frispark)
 #Ratings
 foxtrick.Ratings.desc=Legg til ratinger på kampsiden
 foxtrick.BookmarkAdjust.desc=Endre ikonet knyttet til et bokmerke ved å sette inn den tilsvarende koden i bokmerkekommentaren i klammer: f.eks [cyan] viser cyan ikonet. Mulige verdier: aqua, B, black, blue, brown, cyan, darkpurple, green, idea, lightblue, lightgreen, orange, pink, purple, red, white, yellow
