--- a/content/locale/pt/foxtrick.properties
+++ b/content/locale/pt/foxtrick.properties
@@ -16,7 +16,7 @@ foxtrick.MoveLinks.desc=Move os links da série e bandeira nacional do utilizado
 foxtrick.AttVsDef.desc=Adicionar comparação Ataque/Defesa à página de jogo
 foxtrick.AttVsDef.oldstyle.desc=Estilo Antigo
 foxtrick.AttVsDef.newstyle.desc=Novo Estilo
-foxtrick.AttVsDef.oldstyleifkseperated.desc=Estilo antigo (Livres ind. separados)
+foxtrick.AttVsDef.oldstyleifkseparated.desc=Estilo antigo (Livres ind. separados)
 #Ratings
 foxtrick.Ratings.desc=Adiciona ratings à página de jogo
 foxtrick.BookmarkAdjust.desc=Modificar o ícone associado a um atalho inserindo no comentário do atalho o código correspondente em parêntesis rectos: [cyan] irá mostrar o ícone ciano. Valores possíveis: aqua, B, black, blue, brown, cyan, darkpurple, green, idea, lightblue, lightgreen, orange, pink, purple, red, white, yellow
