--- a/content/locale/sk/foxtrick.properties
+++ b/content/locale/sk/foxtrick.properties
@@ -20,7 +20,7 @@ foxtrick.MoveLinks.desc=Presúva odkazy na ligu a krajinu(vlajku) manažéra do
 foxtrick.AttVsDef.desc=Na stránku zápasu pridáva porovnanie útokov a obrán
 foxtrick.AttVsDef.oldstyle.desc=starý štýl
 foxtrick.AttVsDef.newstyle.desc=nový štýl
-foxtrick.AttVsDef.oldstyleifkseperated.desc=starý štýl (oddelené nepriame kopy)
+foxtrick.AttVsDef.oldstyleifkseparated.desc=starý štýl (oddelené nepriame kopy)
 #Ratings
 foxtrick.Ratings.desc=Na stránku zápasu pridáva ratingy
 foxtrick.BookmarkAdjust.desc=Umožňuje zmeniť ikonu priradenú záložke tým, že do komentára záložky pridáte príslušný kód s anglickým názvom farby v hranatých zátvorkách: napr. [cyan] zobrazí tyrkysovú ikonku. Možné hodnoty: aqua (priezračne modrá), B (písmeno B), black (čierna), blue (modrá), brown (hnedá), cyan (tyrkysová), darkpurple (tmavo fialová), green (zelená), idea, lightblue (svetlo modrá), lightgreen (svetlo zelená), orange (oranžová), pink (ružová), purple (fialová), red (červená), white (bielá), yellow (žltá)
