--- a/content/locale/sq/foxtrick.properties
+++ b/content/locale/sq/foxtrick.properties
@@ -20,7 +20,7 @@ foxtrick.MoveLinks.desc=Lëviz link të flamurit dhe serisë të menaxherit te t
 foxtrick.AttVsDef.desc=Shton krahasimin sulm/mbrojtje te faqa e ndeshjes
 foxtrick.AttVsDef.oldstyle.desc=stili i vjetër
 foxtrick.AttVsDef.newstyle.desc=stili i ri
-foxtrick.AttVsDef.oldstyleifkseperated.desc=stili i vjetër (janë ndarë goditj. stand. indirekte)
+foxtrick.AttVsDef.oldstyleifkseparated.desc=stili i vjetër (janë ndarë goditj. stand. indirekte)
 foxtrick.Ratings.desc=Shton vlerësimet te faqa e ndeshjes
 foxtrick.BookmarkAdjust.desc=Ndryshon ikonën që ka lidhje me një rezervim duke shtuar te komenti i rezervimit kodin përkatës në kllapa katrore. p.sh. [blu e hapur] do tregoi ikonën me këtë ngjyrë. Zgjedhjet e mundëshme janë: ujë, b, e zezë, blu, kafe, blu e hapur, vishnje e mbyllur, jeshile, ide, blu qielli, jeshile e hapur, portokall, rozë, vishnje, e kuqe, e bardhë, e verdhë
 foxtrick.FoxtrickAlert.desc=Tregon një njoftim pop-up me lajmet nga Hattrick edhe kur ju jeni duke bër diçka tjetër për momentin
