--- a/content/locale/sv/foxtrick.properties
+++ b/content/locale/sv/foxtrick.properties
@@ -47,7 +47,7 @@ foxtrick.MoveLinks.desc=Flyttar managerns serie- och flagglänkar till meddeland
 foxtrick.AttVsDef.desc=Lägger till anfall/försvar-jämförelse på matchsidan
 foxtrick.AttVsDef.oldstyle.desc=Gammalt utseende
 foxtrick.AttVsDef.newstyle.desc=Nytt utseende
-foxtrick.AttVsDef.oldstyleifkseperated.desc=Gammalt utseende (separerad ind. frisparkar)
+foxtrick.AttVsDef.oldstyleifkseparated.desc=Gammalt utseende (separerad ind. frisparkar)
 #Ratings
 foxtrick.Ratings.desc=Lägger till betyg på matchsidan
 foxtrick.Ratings.HatStats.desc=HatStats
