--- a/content/locale/uk/foxtrick.properties
+++ b/content/locale/uk/foxtrick.properties
@@ -14,7 +14,7 @@ foxtrick.MoveLinks.desc=Переносить прапор країни та лі
 foxtrick.AttVsDef.desc=Додає порівняння нападу/захисту на сторінці звіту про матч
 foxtrick.AttVsDef.oldstyle.desc=старий стиль
 foxtrick.AttVsDef.newstyle.desc=новий стиль
-foxtrick.AttVsDef.oldstyleifkseperated.desc=старий стиль (вільні удари окремо)
+foxtrick.AttVsDef.oldstyleifkseparated.desc=старий стиль (вільні удари окремо)
 foxtrick.Ratings.desc=Додає рейтинги на сторінці звіту про матч
 foxtrick.BookmarkAdjust.desc=Змінює значок, пов'язаний з закладкою, що додається, у відповідності до коду в квадратних дужках: наприклад, [cyan] покаже блакитний значок. Можливі варіанти: aqua (колір морської хвилі), B (символ B), black (чорний), blue (синій), brown (коричневий), cyan (блакитний), darkpurple (фіолетовий), green (зелений), idea (ідея), lightblue (світло-синій), lightgreen (світло-зелений), orange (помаранчевий), pink (рожевий), purple (пурпуровий), red (червоний), white (білий), yellow (жовтий)
 foxtrick.FoxtrickAlert.desc=Показує виринаюче повідомлення, навіть якщо Ви цієї миті зайняті чимось іншим
