Renaming keys #3: (Discussion from r8115 ) foxtrick.MatchReportFormat.SeparateOwnPlayerColors.desc -> foxtrick.MatchPlayerColouring.SeparateOwnPlayerColors.desc
git-svn-id: https://foxtrick.googlecode.com/svn/branches/0.8@8146 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/de/foxtrick.properties
+++ b/content/locale/de/foxtrick.properties
@@ -135,7 +135,7 @@ foxtrick.ForumLastPost.lastpage.desc=Springe zur letzten Seite, nicht zum letzte
 foxtrick.MatchPlayerColouring.desc=Spieler im Spielbericht farblich hervorheben
 foxtrick.MatchPlayerColouring.SeparateOwnPlayerColors.desc=Eigene Farben für das eigene Team
 foxtrick.MatchReportFormat.desc=Formatierung des Spielberichts in einzelne Abschnitte. Einstellungen zum Format können untenstehend vorgenommen werden.
-foxtrick.MatchReportFormat.SeparateOwnPlayerColors.desc=Eigene Farben für das eigene Team
+foxtrick.MatchPlayerColouring.SeparateOwnPlayerColors.desc=Eigene Farben für das eigene Team
 foxtrick.ForumRedirManagerToTeam.desc=Weiterleitung auf die Vereinsseite von den Managerlinks im Forum
 foxtrick.ManagerButtons.desc=Hinzufügen oder verändern der Managerbuttons auf Team- und Managerseiten
 foxtrick.ManagerButtons.GuestBook.desc=Hinzufügen von Links 'Gästebuch' auf der Manager-Seite und der Vereinsseite
