Renaming keys #4: (Discussion from r8115 ) TransferSearchResultFilters.hide_bruised -> TransferSearchResultFilters.hideBruised TransferSearchResultFilters.hide_injured -> TransferSearchResultFilters.hideInjured
git-svn-id: https://foxtrick.googlecode.com/svn/branches/0.8@8147 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/be/foxtrick.properties
+++ b/content/locale/be/foxtrick.properties
@@ -792,8 +792,8 @@ Senior=Дарослыя
 Youth=Youth
 
 # TransferSearchResultFilters
-TransferSearchResultFilters.hide_bruised=Hide bruised
-TransferSearchResultFilters.hide_injured=Hide injured
+TransferSearchResultFilters.hideBruised=Hide bruised
+TransferSearchResultFilters.hideInjured=Hide injured
 TransferSearchResultFilters.cards=Cards:
 TransferSearchResultFilters.days=Days:
 
