--- a/content/locale/bs/foxtrick.properties
+++ b/content/locale/bs/foxtrick.properties
@@ -776,8 +776,8 @@ Senior=Senior
 Youth=Junior
 
 # TransferSearchResultFilters
-TransferSearchResultFilters.hide_bruised=Sakrij igrače u modricama
-TransferSearchResultFilters.hide_injured=Sakrij povrijeđene igrače
+TransferSearchResultFilters.hideBruised=Sakrij igrače u modricama
+TransferSearchResultFilters.hideInjured=Sakrij povrijeđene igrače
 TransferSearchResultFilters.cards=Kartoni:
 TransferSearchResultFilters.days=Dana:
 
