--- a/content/locale/de/foxtrick.properties
+++ b/content/locale/de/foxtrick.properties
@@ -812,8 +812,8 @@ ShowFriendlyBooked.ShowFriendlies=Freundschaftspiele anzeigen
 
 
 # TransferSearchResultFilters
-TransferSearchResultFilters.hide_bruised=Verberge Angeschlagene
-TransferSearchResultFilters.hide_injured=Verberge Verletzte
+TransferSearchResultFilters.hideBruised=Verberge Angeschlagene
+TransferSearchResultFilters.hideInjured=Verberge Verletzte
 TransferSearchResultFilters.hideSuspended=Verberge Gesperrte
 TransferSearchResultFilters.days=Tage:
 
