--- a/content/locale/es_ca/foxtrick.properties
+++ b/content/locale/es_ca/foxtrick.properties
@@ -771,8 +771,8 @@ Youth=Juvenil
 team.status.booked=Amistoso pactado
 
 # TransferSearchResultFilters
-TransferSearchResultFilters.hide_bruised=Ocultar lastimado
-TransferSearchResultFilters.hide_injured=Ocultar lesionado
+TransferSearchResultFilters.hideBruised=Ocultar lastimado
+TransferSearchResultFilters.hideInjured=Ocultar lesionado
 TransferSearchResultFilters.cards=Tarjetas:
 TransferSearchResultFilters.days=Días:
 
