--- a/content/locale/hu/foxtrick.properties
+++ b/content/locale/hu/foxtrick.properties
@@ -787,8 +787,8 @@ Senior=Felnőtt
 Youth=Ifi
 
 # TransferSearchResultFilters
-TransferSearchResultFilters.hide_bruised=Tapaszos játékosok elrejtése
-TransferSearchResultFilters.hide_injured=Sérült játékosok elrejtése
+TransferSearchResultFilters.hideBruised=Tapaszos játékosok elrejtése
+TransferSearchResultFilters.hideInjured=Sérült játékosok elrejtése
 TransferSearchResultFilters.cards=Lapok:
 TransferSearchResultFilters.days=Napok:
 
