--- a/content/locale/pl/foxtrick.properties
+++ b/content/locale/pl/foxtrick.properties
@@ -766,8 +766,8 @@ Senior=Seniorzy
 Youth=Juniorzy
 
 # TransferSearchResultFilters
-TransferSearchResultFilters.hide_bruised=Ukrywaj z plastrem
-TransferSearchResultFilters.hide_injured=Ukrywaj kontuzjowanych
+TransferSearchResultFilters.hideBruised=Ukrywaj z plastrem
+TransferSearchResultFilters.hideInjured=Ukrywaj kontuzjowanych
 TransferSearchResultFilters.cards=Kartki:
 TransferSearchResultFilters.days=Dni:
 
