--- a/content/locale/sv/foxtrick.properties
+++ b/content/locale/sv/foxtrick.properties
@@ -1062,8 +1062,8 @@ ShowFriendlyBooked.ShowFriendlies=Visa vänskapsmatcher
 
 
 # TransferSearchResultFilters
-TransferSearchResultFilters.hide_bruised=Dölj plåstrade
-TransferSearchResultFilters.hide_injured=Dölj skadade
+TransferSearchResultFilters.hideBruised=Dölj plåstrade
+TransferSearchResultFilters.hideInjured=Dölj skadade
 TransferSearchResultFilters.hideSuspended=Dölj avstängda
 TransferSearchResultFilters.days=Dagar:
 
