--- a/content/locale/es_SU/foxtrick.properties
+++ b/content/locale/es_SU/foxtrick.properties
@@ -798,8 +798,8 @@ Senior=Senior
 Youth=Juvenil
 
 # TransferSearchResultFilters
-TransferSearchResultFilters.hide_bruised=Ocultar lastimado
-TransferSearchResultFilters.hide_injured=Ocultar lesionado
+TransferSearchResultFilters.hideBruised=Ocultar lastimado
+TransferSearchResultFilters.hideInjured=Ocultar lesionado
 TransferSearchResultFilters.cards=Tarjetas:
 TransferSearchResultFilters.days=Días:
 
