de lang: nutton.top -> button.top
git-svn-id: https://foxtrick.googlecode.com/svn/branches/0.8@8149 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/de/foxtrick.properties
+++ b/content/locale/de/foxtrick.properties
@@ -921,7 +921,7 @@ button.save=Speichern
 button.go=Los!
 button.add=Hinzufügen
 button.remove=Entfernen
-nutton.top=Nach oben
+button.top=Nach oben
 button.authorize=Autorisieren
 button.export=Exportiere
 button.import=Importiere
