lt-LT: updated to current rev. and finished translation to line 400
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@8181 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/lt/foxtrick.properties
+++ b/content/locale/lt/foxtrick.properties
@@ -1,4 +1,4 @@
-# LITHUANIAN language file (to r7971)
+# LITHUANIAN language file (to r8137)
 # utf-8 encoded lt-LT
 # By LA-MJ (originally by Mod-summercloud)
 
@@ -7,8 +7,8 @@
 # the left side are idenitifiers for internal foxtrick use. leave them unchanged.
 # sentences starting with # are comments. leave them unchanged
 
-# Text with %-sign eg %s will be automatically replaced by the approriate text.
-# Eg in "The price is %s." %s will be replaced by the selected amount of money.
+# Text with %-sign eg %s will be automatically replaced by the approriate text. 
+# Eg in "The price is %s." %s will be replaced by the selected amount of money. 
 # Thus, you need to include those %s entries into your text accordingly
 
 #declaring direction of the transation. ltr for left-to-right, rtl for right-to-left
@@ -36,7 +36,7 @@ foxtrick.Ratings.desc=Rodo reitingus rungtynių puslapyje
 foxtrick.Ratings.HideAverages.desc=Paslėpti vidutinius HT reitingus
 foxtrick.Ratings.HatStats.desc=HatStats
 foxtrick.Ratings.HatStatsDetailed.desc=HatStats (detaliai)
-foxtrick.Ratings.HatStatsSeparated.desc=HatStats separated per rating
+foxtrick.Ratings.HatStatsSeparated.desc=HatStats (atskirai)
 foxtrick.Ratings.LoddarStats.desc=LoddarStats
 foxtrick.Ratings.PeasoStats.desc=PeasoStats
 foxtrick.Ratings.VnukStats.desc=VnukStats
@@ -56,7 +56,7 @@ foxtrick.TeamPopupLinks.desc=Rodo mažą lentelę su nuorodomis, jei pelės žym
 foxtrick.StaffMarker.desc=Kita spalva išskiria Hattrick darbuotojų vardus forume ir komandų puslapiuose.
 foxtrick.StaffMarker.manager.desc=Pažymėti darbuotojų vardus jų komandos puslapyje.
 foxtrick.StaffMarker.own.desc=Individualus žymėjimas JSON formatu: vartotojo ID rašomas vietoje lauko pavadinimo, o stilius – vietoje reikšmės, pvz., „{"1001" : "color: red;", "1002" : "background-color: yellow;"}“
-foxtrick.StaffMarker.flag.desc=Adds flags to users in the select box
+foxtrick.StaffMarker.HT-Youthclub.desc=Pažymėti „HT-Youthclub“ komandos narius
 #ForumYouthIcons
 foxtrick.ForumYouthIcons.desc=Atsakymo lange prideda jaunimo akademijos mygtukus (taip pat veikia pašto, spaudos pranešimų ir svečių knygos puslapiuose)
 foxtrick.ForumYouthIcons.q.desc=Prideda citatos žymų ikoną, jei jos nėra
@@ -85,6 +85,13 @@ foxtrick.EmbedMedia.EmbedYoutubeVideos.desc=Įdėti „YouTube“ rinkmenas
 foxtrick.EmbedMedia.EmbedVimeoVideos.desc=Įdėti „Vimeo“ rinkmenas
 foxtrick.EmbedMedia.EmbedFunnyOrDieVideos.desc=Įdėti „FunnyOrDie“ rinkmenas
 foxtrick.EmbedMedia.EmbedDailymotionVideos.desc=Įdėti „Dailymotion“ rinkmenas
+foxtrick.EmbedMedia.EmbedModeOEmebed.desc=Naudoti „oEmbed“ rinkmenoms įdėti (tik „Chrome“) 
+foxtrick.EmbedMedia.ReplaceLinksByTitles.desc=Pakeisti nuorodos tekstą į rinkmenos pavadinimą
+foxtrick.EmbedMedia.EmbedSoundCloud.desc=Įdėti „Soundcloud“ rinkmenas
+foxtrick.EmbedMedia.EmbedFlickrImages.desc=Įdėti „Flickr“ paveikslėlius
+foxtrick.EmbedMedia.EmbedDeviantArtImages.desc=Įdėti „Deviantart“ paveikslėlius
+#Forum direct page links
+foxtrick.DirectPageLinks.desc=Pridėti nuorodas leidžiančias peršokti į tam tikrą forumo temos puslapį.
 #
 foxtrick.CopyPostID.desc=Nuoroda žinutės ID kopijuoti
 foxtrick.CopyPosting.desc=Prideda ikona žinutei kopijuoti kartu su atsakymais į ją
@@ -116,7 +123,7 @@ foxtrick.LinksStaff.desc=Prideda išorinių nuorodų savanorių puslapyje
 foxtrick.LinksTracker.desc=Prideda nuorodų į išorinius šalių statistikos puslapius atitinkamų rinktinių ir jų žaidėjų puslapiuose
 foxtrick.LinksClubTransfers.desc=Prideda išorinių nuorodų sandorių puslapyje
 foxtrick.ForumAlterHeaderLine.desc=Pakeičia žinutės antraštę
-foxtrick.Singleline2.desc=Alternative ForumHeader single line module. Slightly faster than the other versions. Disables some conflicting forum post changing modules.
+foxtrick.Singleline2.desc=Alternatyvus mažų forumo antraščių modulis. Veikia šiek tiek greičiau. Išjungia keletą kitų konfliktuojančių forumo modulių.
 # please translate next lines again if needed
 foxtrick.ForumAlterHeaderLine.SingleHeaderLine.desc=Rodo siaurą žinutės antraštę. Šis pasirinkimas gali iškraipyti forumo dizainą. Jeigu taip nutiktų, naudokite 'standartinę' Hattrick temą ir aktyvuokite keletą iš toliau esančių nustatymų.
 foxtrick.ForumAlterHeaderLine.HideOldTime.desc=Paslepia valandas, jei žinutė parašyta seniau nei prieš dieną
@@ -149,7 +156,7 @@ foxtrick.MatchPlayerColouring.desc=Rungtynių ataskaitoje skirtingų komandų ž
 foxtrick.MatchPlayerColouring.SeparateOwnPlayerColors.desc=Atskira spalva saviems žaidėjams 
 foxtrick.MatchReportFormat.desc=Rungtynių ataskaita išskirstoma eilutėmis pagal įvykių laiką ir tipą.
 foxtrick.MatchReportFormat.ShowEventIcons.desc=Rodyti specializuotas įvykių ikonas.
-foxtrick.MatchReportFormat.SeparateOwnTeamColors.desc=Separate own team coloring
+foxtrick.MatchReportFormat.SeparateOwnTeamColors.desc=Atskira spalva savo komandai
 foxtrick.ForumRedirManagerToTeam.desc=Paspaudus ant vartotojo vardo forume, rodomas komandos puslapis, o ne vartotojo puslapis
 foxtrick.ManagerButtons.desc=Pridėti mygtukus valdytojo ir komandos puslapiuose
 foxtrick.ManagerButtons.GuestBook.desc=Rašyti svečių knygoje
@@ -209,7 +216,7 @@ foxtrick.ForumPresentation.Forum_Spoiler_reveal.desc=Visada rodyti slaptukų tur
 foxtrick.ForumPresentation.Forum_NewPostsInBracket.desc=Šalia žinučių skaitiklio skliausteliuose rodyti neperskaitytų žinučių skaičių
 foxtrick.ForumPresentation.Forum_Link_Grey_Icons.desc=Žinutės apačioje esančias tekstines nuorodas pakeisti ikonomis
 foxtrick.ForumPresentation.moved_avatarinfo_fix.desc=Sutaisyti neteisingai išdėstytą avataro informaciją, jei antraštė persipildo
-foxtrick.HeaderFix.RemoveFlicker.desc=Remove flickering in forum using Headerfix with Firefox 3.5
+foxtrick.HeaderFix.RemoveFlicker.desc=Pašalinti forumo mirgėjimą su „Headerfix“ naudojant „Firefox 3.5“
 foxtrick.SkinPlugin.desc=Prideda Jūsų CSS stilių
 foxtrick.CurrencyConverter.desc=Keičia HT valiutą
 foxtrick.MovePlayerStatement.desc=Perkelia žaidėjo pareiškimus prie žaidėjo avataro. Jeigu avatarai išjungti, pareiškimai taip pat pradingsta.
@@ -226,12 +233,11 @@ foxtrick.ExtraShortcuts.FoxTrickPrefs.desc=Nuoroda į Foxtrick nustatymų puslap
 foxtrick.ExtraShortcuts.HtRadio.desc=HtRadio
 foxtrick.ExtraShortcuts.No9.desc=No9 Radio
 foxtrick.ExtraShortcuts.Latehome.desc=Latehome Radio
-foxtrick.ExtraShortcuts.Balkaradio.desc=Balkaradio
 foxtrick.ExtraShortcuts.Downtime.desc=Downtime Radio
 #CopyMatchID
 foxtrick.CopyMatchID.desc=Nukopijuoja rungtynių ID, kai paspaudžiamas rungtynių paveikslėlis (lygos, taurės, draugiškų...) rungtynių arba rungtynių archyvo puslapyje. Taip pat veikia rėmėjams skirtame puslapyje „Vienas prieš kitą“ (kortelėse „Paskutinės rungtynės“ ir „Istorija“).
 foxtrick.HeaderFix.desc=Pritvirtina Hattrick antraštę slenkant puslapį (visuose HT puslapiuose)
-foxtrick.HeaderFix.FixLeft.desc=Also fixes the submenu while scrolling
+foxtrick.HeaderFix.FixLeft.desc=Taip pat pritvirtina submeniu slenkant puslapį
 foxtrick.CopyRatings.desc=Rungtynių ataskaitoje prideda mygtuką, kurį nuspaudus nukopijuojami rungtynių reitingai (HT-ML stiliumi, pritaikytu atvaizdavimui forumo žinutėse)
 foxtrick.GoalDifferenceToTables.desc=Pakilimų ir senų grupės turn. lentelių puslapiuose prideda įvarčių skirtumo stulpelį
 foxtrick.CrossTable.desc=Tvarkaraščio puslapyje sukuria komandų pozijų kitimo laike grafiką ir lentelę, kurioje rodomi visi lygos rungtynių rezultatai
@@ -311,7 +317,7 @@ foxtrick.YouthPromotes.desc=Rodo dienų skaičių, likusį iki galimo jaunio paa
 foxtrick.HTMSPrediction.desc=Rungtynių ataskaitos puslapyje prideda rezultato spėjimą
 foxtrick.HighlightOwnerless.desc=Grupės puslapyje pažymėti komandas be valdytojo.
 foxtrick.LastLogin.desc=Vartotojo puslapyje rodo nuo jo prisijungimo praėjusį laiką
-foxtrick.TransferCompareSort.desc=Clicking on the header sorts the TransferCompare results by TSI, price or form
+foxtrick.TransferCompareSort.desc=Paspaudus antraštę sandorių palyginimo rezultatai rikiuojami pagal TSI, kainą ar formą
 foxtrick.ForumStripHattrickLinks.desc=Ištrina konkretaus serverio adresą įterpus nuorodą į vidinį HT puslapį, kad nuoroda veiktų visiems. Taip pat prideda tarpus persiklojantiems „i/b/u“ „pre“ žymose (modulis FormatPostingText)
 foxtrick.ForumStripHattrickLinks.NoConfirmStripping.desc=Neperspėti apie ištrinamus serverių adresus
 foxtrick.LeagueAndMatchChat.desc=Nuorodos į išorines pokalbių svetaines taurės, federacijų, (jaunių) grupių ir rungtynių puslapiuose. (Jei nesulaukėte pasveikinimo, svetainė neveikia)
@@ -355,7 +361,7 @@ foxtrick.ShowLineupSet.LineupSet.desc=Rungtynėms nurodė sudėtį
 foxtrick.ShowLineupSet.Ownerless.desc=Neturi valdytojo
 foxtrick.ShowLineupSet.Winning.desc=Laimėjo (rezultatų skiltyje ir tvarkaraštyje)
 foxtrick.SupporterStatsEnhancements.desc=Rėmėjo statistikoje paryškinti dabartinius žaidėjus
-foxtrick.MobileEnhancements.desc=Set of enhancements for mobile devices
+foxtrick.MobileEnhancements.desc=Patobulinų rinkinys mobiliesiems prietaisams
 foxtrick.MatchOrderInterface.desc=Rungtynių nurodymų puslapio patobulinimai.
 foxtrick.MatchOrderInterface.PlayedLastMatch.desc=Pažymėti žaidėjus, žaidusius paskutinėse rungtynėse (žaidėjo kortelėje rodomi žaistų minučių skaičius ir pozicija)
 foxtrick.MatchOrderInterface.Specialties.desc=Rodyti žaidėjų specialybes
@@ -367,7 +373,9 @@ foxtrick.MatchSimulator.RatingsBellow.desc=Rodyti spėjimą žemiau
 foxtrick.MatchSimulator.RatingsRight.desc=Rodyti spėjimą dešinėje
 foxtrick.HeaderToggle.desc=Paspaudus ant antro lygio antraštės (su rodykle) įjungiamas ar išjungiamas tos sekcijos vaizdavimas. Nustatymai atsimenami kiekvienam puslapiui atskirai
 foxtrick.Filter.desc=Geriausių žaidėjų puslapyje pridėti filtrus
-foxtrick.RatingsDisplay.desc=Vidutinius reitingus statistikoje paverčia į 0–20 intervalo reitingus
+foxtrick.RatingsDisplay.desc=Pakeičia vidutinius reitingus statistikos puslapiuose
+foxtrick.RatingsDisplay.DenominationsRange.desc=Į 0–20 intervalo nomenklatūrą
+foxtrick.RatingsDisplay.HatStats.desc=Į „Hatstats“
 
 # -----------------------------------------------------------------------------
 
@@ -874,6 +882,7 @@ less=mažiau...
 TeamPopupLinks.prefsCaption=Nuorodų nustatymai
 TeamPopupLinks.ShowByDefault=Rodyti iškart
 TeamPopupLinks.ShowOnMore=Rodyti paspaudus „daugiau“
+TeamPopupLinks.OpenNewTab=Open in new tab
 
 total_stars=Žvaigždučių suma
 
@@ -1052,6 +1061,7 @@ button.import=Įkelti
 button.restoreDefault=Atstatyti pradinius nustatymus
 button.deleteToken=Panaikinti prieigą
 button.disableAll=Išjungti viską
+button.revokePermissions=Revoke permissions
 
 status.loading=Įkeliama…
 status.loading.abbr=…
@@ -1119,6 +1129,7 @@ foxtrick.prefs.oauth.delete=Panaikinti CHPP prieigą pasirinktai komandai.
 # NOTE - please preserve the braces, inner content will be converted to link
 foxtrick.prefs.oauth.delete.desc=Galioja tik šiai naršyklei. Jei norite visiškai panaikinti leidimą Foxtrick pasiekti Jūsų komandos duomenis, tai galite padaryti Hattrick puslapyje „{CHPP produktų valdymas}“.
 foxtrick.prefs.labelDisableAll=Išjungti visus Foxtrick modulius
+foxtrick.prefs.labelRevokePermissions=Revoke all optional permissions (Chrome only)
 foxtrick.prefs.labelSavePrefs=Eksportuoti nustatymus ir (ar) asmeninius duomenis
 foxtrick.prefs.labelSavePrefs_Prefs=Nustatymai
 foxtrick.prefs.labelSavePrefs_Notes=Asmeniniai duomenys (šablonai, nuorodos ir sandorių paieškos filtrai)
@@ -1162,10 +1173,12 @@ prefs.view.by.page=Rodyti paskutinio HT puslapio funkcijas
 delete_foxtrick_branches_ask=Ar tikrai norite atstatyti pradinius nustatymus?
 delete_oauth_ask=Delete OAuth token/secret for teamid %s?
 disable_all_foxtrick_modules_ask=Ar tikrai norite išjungti visus patobulinimus?
+revoke_permissions_ask=Are you sure you want to revoke all optional permissions?
 
 foxtrick.prefs.AdditionalOptions=Bendri nustatymai
 foxtrick.prefs.smallcopyicons=Rodyti kopijavimo ikonas antraštėje, o ne paraštėje
 foxtrick.prefs.DisplayHTMLDebugOutput=Rodyti FoxTrick veiklos žurnalą puslapių apačioje (programuotojams)
 
+foxtrick.prefs.permissionsHint=%s needs permission to work. Allow access in the following dialog.
 
 ###EOF
