--- a/content/locale/lt/release-notes.xml
+++ b/content/locale/lt/release-notes.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!-- Translated to r7911-->
+<!-- Translated to r8183-->
 <!-- Notes for localization -->
 <!-- Please keep the overall structure and the tags like <note>, <item>,
      <module> unchanged, and basically translate the text.
@@ -11,6 +11,13 @@
 <notes xmlns:xhtml="http://www.w3.org/1999/xhtml">
 <note version="nightly" localized-version="Development build">
 <item>Peržiūrėkite „Google Code“ <xhtml:a href="http://code.google.com/p/foxtrick/source/list">pakeitimų sąrašą</xhtml:a>.</item>
+</note>
+
+<note version="0.8.2">
+<item>Korėjiečių kalba (SI-CH)</item>
+<item>Lietuvių kalba (LA-MJ)</item>
+<item>Bendras kalbų tekstų valymas (CatzHoek)</item>
+<item>Kiti maži pataisymai. (convincedd, CatzHoek)</item>
 </note>
 
 <note version="0.8.1">
